--- a/src/components/LogoTape.css
+++ b/src/components/LogoTape.css
@@ -1,5 +1,3 @@
-
-
 .logo-tape {
     overflow: hidden;
     width: 100%;
@@ -7,21 +5,20 @@
     background: rgb(216, 82, 82);
     padding: 10px 0;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    position: relative;
 }
 
 .logo-tape-content {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
     animation: moveTape 30s linear infinite;
-    padding: 2rem 0;
+    width: max-content;
+    padding: 1.5rem 0;
 }
 
 .logo-tape-content img {
     height: 50px;
     margin: 0 20px;
     transition: transform 0.3s;
-    margin: 0 2rem;
 }
 
 .logo-tape-content img:hover {
@@ -30,21 +27,21 @@
 
 @keyframes moveTape {
     0% {
-        transform: translateX(100%);
+        transform: translateX(0%);
     }
     100% {
-        transform: translateX(-100%);
+        transform: translateX(calc(-100% + 100vw));
     }
 }
 
-
 @media (max-width: 600px) {
     .logo-tape-content {
-
-        animation: moveTape 10s linear infinite;
+        animation: moveTape 30s linear infinite;
     }
-    
-    
+}
 
-  }
-  
+@media (min-width: 700px) and (max-width: 1025px) {
+    .logo-tape-content {
+        padding-top: 4rem;
+    }
+}
