--- a/src/components/Servises/WebDevelopment.css
+++ b/src/components/Servises/WebDevelopment.css
@@ -44,7 +44,7 @@
   margin: 5px 0;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1368px) {
   .container_WebDevelopment {
     height: auto;
     flex-direction: column;
@@ -72,5 +72,35 @@
 
   .hexagon_WebDevelopment li {
     margin: 3px 0;
+  }
+}
+
+
+
+@media (min-width: 1200px) and (max-width: 1370px) {
+  .hexagon_WebDevelopment {
+    width: 100%;
+    height: auto;
+    margin: 20px 0;
+    clip-path: none;
+    border-radius: 10px;
+  }
+
+  .hexagon_WebDevelopment .content {
+    padding: 20px;
+  }
+
+  .hexagon_WebDevelopment h2 {
+    font-size: 2rem;
+  }
+
+  .hexagon_WebDevelopment ul {
+    padding: 0 30px;
+  }
+
+  .hexagon_WebDevelopment li {
+    font-size: 1.4rem;
+
+    margin: 5px 0;
   }
 }
